--- a/submission/index.html
+++ b/submission/index.html
@@ -14,6 +14,6 @@
 <body>
 	<h1>HELLO WORLD</h1>
 	<!--Import jQuery before materialize.js-->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
